# sa

./: CMakeLists.txt  LICENSE  main.cpp
include/: ising.hpp  mc_manager.hpp  options.hpp
src/: CMakeLists.txt  ising.cpp  mc_manager.cpp
